# Rustoxy

./: .gitignore  Cargo.toml
src/: main.rs
src/commands/: cmds.rs
