[package]
name = "rustoxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
rand = "*"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.5" }